--- a/src/Final-Project-CSS.ipynb
+++ b/src/Final-Project-CSS.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "c40e2ee9",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
        "pyreadstat._readstat_parser.metadata_container"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "86ae3634",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "9a958c7e",
    "metadata": {
     "scrolled": true
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "9316cd0a",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "436c03a2",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "8364850c",
    "metadata": {},
    "outputs": [
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "56422a77",
    "metadata": {},
    "outputs": [
@@ -1472,12 +1472,12 @@
     "plt.figtext(0.5, -.35, txt, wrap=True,\\\n",
     "           horizontalalignment='center',\n",
     "           fontsize=10)\n",
-    "plt.savefig('coll_gpa.png',dpi=300,bbox_inches='tight')"
+    "plt.savefig('coll_gpa.png',dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "a9ceb77a",
    "metadata": {
     "scrolled": true
@@ -1517,12 +1517,12 @@
     "plt.figtext(0.5, -.15, txt, wrap=True,\\\n",
     "           horizontalalignment='center',\n",
     "           fontsize=12)\n",
-    "plt.savefig('cat_spec_hist.png',dpi=300,bbox_inches='tight')"
+    "plt.savefig('cat_spec_hist.png',dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "49bf4cf6",
    "metadata": {
     "scrolled": false
@@ -1557,12 +1557,12 @@
     "plt.figtext(0.5, -.30, txt, wrap=True,\\\n",
     "           horizontalalignment='center',\n",
     "           fontsize=10)\n",
-    "plt.savefig('sense_box.png',dpi=300,bbox_inches='tight')"
+    "plt.savefig('sense_box.png',dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "a219b064",
    "metadata": {},
    "outputs": [
@@ -1592,12 +1592,12 @@
     "plt.figtext(0.5, -.10, txt, wrap=True,\\\n",
     "           horizontalalignment='center',\n",
     "           fontsize=10)\n",
-    "plt.savefig('viol_sat.png',dpi=300,bbox_inches='tight')"
+    "plt.savefig('viol_sat.png',dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "d986f429",
    "metadata": {},
    "outputs": [
@@ -1645,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "d98c93e7",
    "metadata": {},
    "outputs": [
@@ -1660,7 +1660,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w1/8k46sxfn44s0hbx_zl6wqfgc0000gn/T/ipykernel_28386/4196011224.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/w1/8k46sxfn44s0hbx_zl6wqfgc0000gn/T/ipykernel_51532/4196011224.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "a5f76af3",
    "metadata": {
     "scrolled": true
@@ -1704,7 +1704,7 @@
        " 'SENSE_BELONG']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1715,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "ffde0f11",
    "metadata": {},
    "outputs": [
